[gd_scene load_steps=32 format=3 uid="uid://tbiirjlkmisb"]

[ext_resource type="Script" path="res://Scene/Player/player.gd" id="1_ottsi"]
[ext_resource type="Texture2D" uid="uid://blp212bgg732" path="res://Art/Sprites/01-King Human/Idle (78x58).png" id="1_t4w47"]
[ext_resource type="Texture2D" uid="uid://dc8gieda2xylb" path="res://Art/Sprites/01-King Human/Run (78x58).png" id="3_75lvn"]
[ext_resource type="FontFile" uid="uid://cqyiip1ldq5u1" path="res://Art/Minecraft.ttf" id="4_0r34l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4e4y1"]
atlas = ExtResource("1_t4w47")
region = Rect2(0, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp4j6"]
atlas = ExtResource("1_t4w47")
region = Rect2(78, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rof5"]
atlas = ExtResource("1_t4w47")
region = Rect2(156, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_24g5y"]
atlas = ExtResource("1_t4w47")
region = Rect2(234, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t0p3"]
atlas = ExtResource("1_t4w47")
region = Rect2(312, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_0igjf"]
atlas = ExtResource("1_t4w47")
region = Rect2(390, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3y2q"]
atlas = ExtResource("1_t4w47")
region = Rect2(468, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7hcf"]
atlas = ExtResource("1_t4w47")
region = Rect2(546, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7jfq"]
atlas = ExtResource("1_t4w47")
region = Rect2(624, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhjgm"]
atlas = ExtResource("1_t4w47")
region = Rect2(702, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i1sp"]
atlas = ExtResource("1_t4w47")
region = Rect2(780, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo4fa"]
atlas = ExtResource("3_75lvn")
region = Rect2(0, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmbyk"]
atlas = ExtResource("3_75lvn")
region = Rect2(78, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_fious"]
atlas = ExtResource("3_75lvn")
region = Rect2(156, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2x0e"]
atlas = ExtResource("3_75lvn")
region = Rect2(234, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi5f1"]
atlas = ExtResource("3_75lvn")
region = Rect2(312, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogwk2"]
atlas = ExtResource("3_75lvn")
region = Rect2(390, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bv16"]
atlas = ExtResource("3_75lvn")
region = Rect2(468, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_usxrq"]
atlas = ExtResource("3_75lvn")
region = Rect2(546, 0, 78, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_rir6y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e4y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp4j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rof5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24g5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t0p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0igjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3y2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7hcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7jfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhjgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i1sp")
}],
"loop": true,
"name": &"Idling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo4fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmbyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fious")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2x0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi5f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogwk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usxrq")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_p1si4"]
resource_name = "Walk"
length = 0.466668
loop_mode = 1
step = 0.00833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0833333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_v2mb5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qymyd"]
resource_name = "Idle"
length = 0.666668
loop_mode = 1
step = 0.00833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idling"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7keaj"]
_data = {
"Idle": SubResource("Animation_qymyd"),
"RESET": SubResource("Animation_v2mb5"),
"Walk": SubResource("Animation_p1si4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyluw"]
size = Vector2(20, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_pn4mb"]
radius = 15.1327

[sub_resource type="LabelSettings" id="LabelSettings_ihp7o"]
font = ExtResource("4_0r34l")

[node name="Player" type="CharacterBody2D"]
scale = Vector2(-1, 1)
collision_mask = 7
script = ExtResource("1_ottsi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7, -2)
sprite_frames = SubResource("SpriteFrames_rir6y")
animation = &"Walking"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_7keaj")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_fyluw")
metadata/_edit_lock_ = true

[node name="PickUpDetectArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpDetectArea"]
shape = SubResource("CircleShape2D_pn4mb")

[node name="PickUpLabel" type="Label" parent="."]
offset_left = 14.0
offset_top = -25.0
offset_right = 68.0
offset_bottom = -2.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 1
text = "Press E 
to collecte"
label_settings = SubResource("LabelSettings_ihp7o")

[connection signal="area_entered" from="PickUpDetectArea" to="." method="_on_pick_up_detect_area_area_entered"]
[connection signal="area_exited" from="PickUpDetectArea" to="." method="_on_pick_up_detect_area_area_exited"]
